--- a/codespitz85_javascript/html/04_concurrency.html
+++ b/codespitz85_javascript/html/04_concurrency.html
@@ -59,8 +59,8 @@
 
         const queue = new Set;
         // 배열에 담을 수 있는 것은 사실상 값 밖에 없다고 생각 해야된다.
-        // 수학적 프로그래밍은 값이라는 context를 사용, 메모리에는 다를지라도 같다. 안에 있는 값이 같기 때문, 값은 여러번 중복이 가능하다.
-        // 객체지향에 대한 객체의 컬렉션은 Set에 넣어야한다.
+        // 수학적 프로그래밍은 값이라는 context를 사용, 메모리에는 다를지라도 같다. 안에 있는 값이 같기 때문, 값은 여러번 중복이 가능하다. 배열은 여러개, 같은 것을 넣을 수 있는데 그것은 값밖에 없다.
+        // 객체지향에 대한 객체의 컬렉션은 Set에 넣어야 중복을 피할 수 있다.
 
         const f = time =>{
             queue.forEach(item=>{
