--- a/codespitz85_javascript/html/06_generator.html
+++ b/codespitz85_javascript/html/06_generator.html
@@ -7,55 +7,38 @@
 </head>
 <body>
     <div style="display:none;">
+        Iterable // Iterator
+
+        자바스크립트의 인터페이스는 특정 개체의 특정 키나 값을 정의한 것, Object의 형태를 인터페이스라고 함.
+
+        이터러블 인터페이스는 이터레이터라는 메소드를 갖고있다.
+        이터레이터는 키안에 함수가 들어가 있어야하고 함수는 이터레이터를 return 해야한다.
+
+        이터레이터 - next라는 함수를 호출하면 object를 return한다는 인터페이스를 정의함
+        next를 호출하면 value와 done 키가 있는 object를 return
+        done - true /false (앞으로 계속 next를 호출 할 때 false)
+        value - 이번에 받을 값이 있음, done이 true 이면 value는 undefined
+
+        제너레이터
+        - 유사 이터러블
+        - 제너레이터 자체는 이터러블 아니다. 이터러블은 이터레이터라는 함수를 호출해야 이터레이터 함수를 줌
+        - 제너레이터는 그냥 호출하면 이터레이터가 튀어나옴
+
+        suspend, resume (멈춤과 진행)
 
     </div>
 
     <script>
-        // timeout code
-        const Item = class{
-            time; // field 영역
-            block; // field 영역
-            constructor(block, time){
-                this.block = block;
-                this.time = time + performance.now();
-            }
-        };
 
-        const queue = new Set;
 
-        const f = time =>{
-            queue.forEach(item=>{
-                if(item.time > time) return;
-                queue.delete(item);
-                item.block();
-            });
-            requestAnimationFrame(f);
-        };
-        requestAnimationFrame(f);
-
-        const timeout = (block, time)=>queue.add(new Item(block, time));
-        // timeout code
-
-        const working =_=>{};
-        for(let i=0; i<100000; i++) working();
-        // js 화살표 함수는 인자가 1개일 때 괄호를 생략 가능, 변수 이름으로는 언더바 사용 가능
-
-        const nbFor = (max, load, block)=>{
+        const infinity = (function*(){
             let i = 0;
-            const f = time=>{
-                let curr = load;
-                while(curr-- && i < max){
-                    block();
-                    i++;
-                }
-                console.log(i);
-                if(i < max - 1) timeout(f, 0);
-                // if(i < max - 1) requestAnimationFrame(f);
-            };
-            timeout(f, 0);
-            // requestAnimationFrame(f);
-        };
-        nbFor(1000, 100, working);
+            while(true) yield i++;
+        })();
+
+        console.log(infinity.next());
+
+
     </script>
 </body>
 </html>
